# gpt-instruments-gen

./: .gitattributes  .gitignore  Docusaurus Generation.ipynb  Docusaurus stuff.ipynb  README.md  [DEV] Python Driver code gen with ChatGPT.ipynb  airtable_table.py  create_device_snippets.py  data_utils.py  db_page_generate.py  device_data.csv  fix_file_name.py  generate_md_files.py  generate_snippets.py  github_utils.py  load_data.py  log.py  pyproject.toml  query_chatgpt.py  query_chatgpt4.py  requirements.txt  scraping_utils.py  templates.py  utils.py  wiki_page_generate.py
data/: category_video.csv  cats_map.json  device_data.csv  instrumental.csv  instrumentkit.csv  libs_map.json  manufacs_map.json  pymeasure.csv  pytango.csv  qcodes.csv  qcodes_community.csv  table_data.json
docusaurus/: python-daq-library.md  vendors.md
docusaurus/Cameras/: CC126Mu (Example).md  CC126Mu-(Example).md  CC126Mu.md  Kinetix sCMOS (And All the Cameras)).md  Kinetix-sCMOS-(And-All-the-Cameras)).md  Kinetix-sCMOS-all_cameras.md  PCO Pixelfly.md  PCO-Pixelfly.md  Pi Camera.md  Pi-Camera.md  Thorlab DCU224C (Example).md  Thorlab-DCU224C-(Example).md  Thorlabs---DCU224C.md
docusaurus/Coincidence Counter/: CC1.md
docusaurus/DAQ boards/: ATS9360 - 12bit, 1.8GS-s.md  ATS9360---12bit,-1.8GS-s.md  ATS9373 - 12 bit, 4 GS-s.md  ATS9373---12-bit,-4-GS-s.md  ATS9440 - 14 bit, 125 MS-s, 4 ch.md  ATS9440---14-bit,-125-MS-s,-4-ch.md  ATS9870 - 8 bit, 1 GS-s.md  ATS9870---8-bit,-1-GS-s.md  DAQ.md  KEYSIGHT 34934A.md  KEYSIGHT 34980A Submodules.md  KEYSIGHT 34980A.md  KEYSIGHT-34934A.md  NI-DAQ.md  (+4 more)
(+1773 files in other folders)
