[tool.poetry]
name = "gpt-docs-gen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gpt_docs_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
airtable = "^0.4.8"
tqdm = "^4.65.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
cloudinary = "^1.33.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
